--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@astrojs/tailwind": "^5.0.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "astro": "^3.5.2",
+    "astro": "3.6.4",
     "astro-icon": "^0.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
